@@ -243,6 +243,8 @@ class CFOptions(object):
                 plot.verbose = True
         except:
             pass
+        plot.defaults['LABEL_FONT_SIZE']='12p'
+        plot.defaults['ANOT_FONT_SIZE']='10p'
         return plot
 
     def cffile(self,argn=0):
