@@ -62,6 +62,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
                       'progs/construct_field.py',
+                      'progs/make_anim.py',
                       'progs/plotCFvar.py',
                       'progs/plotEISvar.py',
                       'progs/plotEISMINT.py',
